0.13.2.AP (PRE-RELEASE):
-----------------------
- Adds `HaltSeconds` Function
  * As `PauseSeconds` but does not terminate on keypress
- Improves `ScreenShot` and `DirectBoot` Features
  * Properly limited to one (1) sreenshot per keypress
  * Minimises screen shudder when `ESC` key is held down to override SilentBoot
    - Removes limitation of key press not continuing beyond the on-screen message display
  * Fixes Screenshots being only functional for the main screen
    - This bug was introduced in v0.13.2.AN (Commit 99da7ce)
- Improves `ProtectNVRAM` Feature
  * Adds `UnlockID` and `UnlockIDCopy` to filtered items
    - These are not certificates but work in concert with the certificates
    - Not required once certificates are filtered and additionally, filtering these reduces NVRAM writes
- Improves Identification of Linux Instances
  * `vmlinuz`, `bzImage`, and `kernel` loaders are now accounted for as Linux loaders
  * Hence the `ProtectNVRAM` feature is not applied to such loaders
  * The `grub` loader was already accounted for
- Improves OS Boot Filtering
  * The `OSType` flag is now taken into account
- Improves Load Error/Warning Display
  * The `ContinueOnWarning` feature is forced on temporarily if required
- Removes `BootKicker` feature
  * The feature was added as part of attempts to allow the MacPro5,1 to show the RefindPlus screen
  * This was ultimately achieved via other means
  * The feature never actually worked properly and hence, there is no need for it to remain
- Amends Default Loader Scan for APFS Support Volumes
  * APFS Recovery Volumes are handled as Mac Recovery Tools and not as volumes with loaders
  * These are now added to the DontScanVolume list by default
  * APFS `Update` and `VM` volumes are similarly added
- Amends Scan for `.VolumeIcons` and `VolumeBadges`
  * Volumes in the `DontScanVolume` list are now skipped
- Amends System Table Reallocations
  * No longer copies memory for system table reallocations